feat: carpetas añadidas types,data
